<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/thing1Amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:autofillHints=""
        android:hint="@string/empty"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/thing2Amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageOrder"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/thing2Amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:autofillHints=""
        android:hint="@string/empty"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/totalPrice"
        app:layout_constraintEnd_toEndOf="@+id/thing1Amount"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="@+id/thing1Amount"
        app:layout_constraintTop_toBottomOf="@+id/thing1Amount"
        app:layout_constraintVertical_bias="0.629" />

    <TextView
        android:id="@+id/pageOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:text="@string/page1_name"
        android:textAllCaps="true"
        android:textColor="#F45B69"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/thing1Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:height="50dp"
        android:gravity="center"
        android:text="@string/thing1"
        android:textColor="#7776BC"
        android:textIsSelectable="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/thing1Amount"
        app:layout_constraintEnd_toEndOf="@+id/thing2Name"
        app:layout_constraintStart_toStartOf="@+id/thing2Name"
        app:layout_constraintTop_toTopOf="@+id/thing1Amount" />

    <TextView
        android:id="@+id/thing2Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:gravity="center"
        android:text="@string/thing2"
        android:textColor="#7776BC"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/thing2Amount"
        app:layout_constraintEnd_toEndOf="@+id/totalStr"
        app:layout_constraintStart_toStartOf="@+id/totalStr"
        app:layout_constraintTop_toTopOf="@+id/thing2Amount" />

    <TextView
        android:id="@+id/totalStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:height="50dp"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="#7776BC"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalPrice"
        app:layout_constraintEnd_toStartOf="@+id/totalPrice"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/totalPrice" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/thing2Amount"
        app:layout_constraintStart_toStartOf="@+id/thing2Amount"
        app:layout_constraintTop_toBottomOf="@+id/thing2Amount" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalPrice">

        <Button
            android:id="@+id/clearButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:height="50dp"
            android:backgroundTint="#7776BC"
            android:text="@string/clear_button"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/submitButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:height="50dp"
            android:backgroundTint="#7776BC"
            android:text="@string/submit_button"
            android:textColor="#FFFFFFFF"
            android:textSize="22sp"
            app:cornerRadius="5dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>